force-app/main/default/objects/maps__ShapeLayerGeometry__c/maps__ShapeLayerGeometry__c.object-meta.xml
<CustomObject>
    <label>Maps Shape Layer Geometry</label>
    <nameField>
        <label>Geometry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Shape Layer Geometries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>