force-app/main/default/objects/maps__ShapeLayerGeometry__c/fields/maps__Geometry10__c.field-meta.xml
<CustomField>
    <fullName>maps__Geometry10__c</fullName>
    <label>Geometry 10</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>