force-app/main/default/objects/maps__ShapeLayerGeometry__c/fields/maps__GeometrySize__c.field-meta.xml
<CustomField>
    <fullName>maps__GeometrySize__c</fullName>
    <label>Geometry Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>