force-app/main/default/objects/maps__ShapeLayerGeometry__c/fields/maps__ShapeLayer__c.field-meta.xml
<CustomField>
    <fullName>maps__ShapeLayer__c</fullName>
    <label>Maps Shape Layer</label>
    <referenceTo>maps__ShapeLayer__c</referenceTo>
    <relationshipLabel>Shape Layers Geometries</relationshipLabel>
    <relationshipName>ShapeLayerGeometries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>